--- a/Assests/style/style/style.css
+++ b/Assests/style/style/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: aqua;
+  background-color: rgb(26, 189, 11);
 }
 .header-flex {
   display: flex;
@@ -7,7 +7,6 @@ body {
 }
 
 section {
-  border: 3px solid black;
   display: flex;
   justify-content: center;
   padding: 100px;
@@ -15,6 +14,7 @@ section {
 }
 
 .quiz-box {
+  background-color: rgb(207, 76, 76);
   display: inline-block;
   padding: 50px;
   margin: 50px;
@@ -22,7 +22,9 @@ section {
 }
 
 button {
+  background-color: green;
   border-radius: 5px;
   padding: 5px;
   margin: 5px 25px 5px 50px;
 }
+ 
