--- a/Assests/style/style/style.css
+++ b/Assests/style/style/style.css
@@ -1,42 +1,87 @@
-body {
-  box-sizing: border-box;
-  font-family: 'Roboto Mono', monospace;
-  background-color: rgb(26, 189, 11);
+* {
+  font-family: "Roboto Mono", monospace;
 }
-.header-flex {
+
+:root {
+  --hue--neutral: 500;
+  --hue--wromg: 0;
+  --hue--correct: 145;
+}
+
+body{
+  --hue: var(--hue--neutral);
+  background-color: hsl(var(--hue), 100%, 20%);
+}
+header {
   display: flex;
   justify-content: space-between;
 }
 
-section {
+.body {
   display: flex;
   justify-content: center;
-  padding: 100px;
-  margin: 100px;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
+
+
 
 .container {
-  background-color: rgb(207, 76, 76);
-  display: inline-block;
-  padding: 50px;
-  margin: 50px;
-  border: 3px solid black;
+  background-color: aliceblue;
   border-radius: 10px;
+  padding: 15px;
+  margin: 15px;
+  box-shadow: 0 0 10px 1px;
 }
 
-button {
-  background-color: green;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 5px 50px 5px 50px;
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
 }
 
-#high-score{
-  padding: 10px;
-  margin: 10px;
+.btn {
+  --hue: var(--hue--neutral);
+  border: 1px solid hsl(var(--hue), 100%, 30%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin: 15px;
+  color: white;
+  outline: none;
 }
- 
-#timer {
-  padding: 10px;
-  margin: 10px;
+.btn:hover {
+  border-color: black;
 }
+
+.btn.correct {
+  --hue: var(--hue--correct);
+  color: black;
+}
+
+.btn.wrong {
+  --hue: var(--hue--wrong);
+  color: black;
+}
+
+.start-btn,
+.next-btn {
+  font-size: 20pt;
+  font-weight: bolder;
+  padding: 10px 20px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hide {
+  display: none;
+}
+
+
+/* background color white*/
